# persontag-gwenview

./: CMakeLists.txt  main.cpp  persontagwidget.cpp  persontagwidget.h
